--- a/examples/simple-remote/devenv.yaml
+++ b/examples/simple-remote/devenv.yaml
@@ -1,6 +1,6 @@
 inputs:
   simple:
-    url: github:cachix/devenv
+    url: github:caprinix/devenv
     flake: false
 imports:
   - simple/examples/simple
